--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ language: java
 jdk:
   - oraclejdk11
 install: true
-script: ./mvnw clean install
+script: ./mvnw -q clean install
 branches:
   only:
     - master
 after_success:
   - docker login -u $DOCKER_USER -p $DOCKER_PASS
-  - docker build -f Dockerfile-single -t fred4jupiter/fredbet .
+  - docker build -f Dockerfile -t fred4jupiter/fredbet .
   - docker tag fred4jupiter/fredbet fred4jupiter/fredbet:latest
   - docker push fred4jupiter/fredbet:latest
