--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,4 +6,4 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Build Docker image
-      run: docker build --file Dockerfile fred4jupiter/fredbet .
+      run: docker build -t fred4jupiter/fredbet .
