update password registration process

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -8,3 +8,4 @@ msg.input.teamOne.teamTwo                   = Bitte geben Sie einen Namen f\u00F
 msg.invalidTeamResult                       = Die Ergebniseingabe ist ung\u00FCltig!
 msg.passwordChange.oldAndNewPasswordAreSame = Sie d\u00FCrfen als neues Passwort nicht ihr altes verwenden!
 msg.passwordChange.passwordMismatch         = Das neue Passwort stimmt nicht mit der Wiederholung \u00FCberein!
+msg.registration.passwordMismatch=Das eingegebene Passwort stimmt nicht mit der Passwortwiederholung überein!
