--- a/Dockerfile-single
+++ b/Dockerfile-single
@@ -25,4 +25,5 @@ USER fred
 
 WORKDIR /home/fred
 
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /home/fred/fredbet.jar" ]
+ENTRYPOINT [ "sh", "-c", "java -jar /home/fred/fredbet.jar" ]
+CMD ["$JAVA_OPTS -Djava.security.egd=file:/dev/./urandom"]
