--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ jobs:
         - docker tag fred4jupiter/fredbet fred4jupiter/fredbet:latest
         - docker push fred4jupiter/fredbet:latest
         - docker logout
-        - docker login -u dummy -p $HEROKU_AUTH_TOKEN registry.heroku.com
-        - docker tag fred4jupiter/fredbet registry.heroku.com/fred4jupiter/fredbet/web
-        - docker push registry.heroku.com/fred4jupiter/fredbet/web
-        - docker logout
+        #- docker login -u dummy -p $HEROKU_AUTH_TOKEN registry.heroku.com
+        #- docker tag fred4jupiter/fredbet registry.heroku.com/fred4jupiter/fredbet/web
+        #- docker push registry.heroku.com/fred4jupiter/fredbet/web
+        #- docker logout
