--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,12 @@
             <version>1.3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mnode.ical4j</groupId>
+            <artifactId>ical4j</artifactId>
+            <version>3.0.13</version>
+        </dependency>
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
