--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,20 +16,20 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build image
-        run: docker build . --file Dockerfile --tag fred4jupiter/fredbet
+        run: docker build . --file Dockerfile --tag fredbet
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
 
       - name: Push image to GitHub Docker image registry
         run: |          
-          docker tag fred4jupiter/fredbet docker.pkg.github.com/fred4jupiter/fredbet
-          docker push docker.pkg.github.com/fred4jupiter/fredbet
+          docker tag fredbet docker.pkg.github.com/fred4jupiter/fredbet/fredbet:latest
+          docker push docker.pkg.github.com/fred4jupiter/fredbet/fredbet:latest
 
       - name: Heroku Release
         run: |
           docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
-          docker tag docker.pkg.github.com/fred4jupiter/fredbet registry.heroku.com/fred4jupiter/fredbet
+          docker tag docker.pkg.github.com/fred4jupiter/fredbet/fredbet registry.heroku.com/fred4jupiter/fredbet
           docker push registry.heroku.com/fred4jupiter/fredbet
           heroku container:release web -a fredbet
         env:
