--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Heroku Release
         run: |
           docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
-          docker tag docker.pkg.github.com/fred4jupiter/fredbet/fredbet registry.heroku.com/fred4jupiter/fredbet
+          docker tag fredbet registry.heroku.com/fred4jupiter/fredbet
           docker push registry.heroku.com/fred4jupiter/fredbet
           heroku container:release web -a fredbet
         env:
