validate in dev profile

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,6 +8,9 @@ spring:
       path: /console
       settings:
         web-allow-others: true
+  jpa:
+    hibernate:
+      ddl-auto: validate
   datasource:
     hikari:
       jdbc-url: jdbc:h2:file:~/fredbet/fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
