moved create demo data into property

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -16,7 +16,5 @@ spring:
       jdbc-url: jdbc:h2:file:~/fredbet/fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
       # jdbc-url: jdbc:h2:mem:fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 
-#      jdbc-url: jdbc:mysql://localhost:3306/fredbet
-#      username: fredbet
-#      password: fredbet
-#      driver-class-name: com.mysql.jdbc.Driver
+fredbet:
+  create-demo-data: false
