update config for integration tests; update postgres example

--- a/pom.xml
+++ b/pom.xml
@@ -269,6 +269,11 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <image>
+                        <name>fred4jupiter/fredbet</name>
+                    </image>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -307,6 +312,14 @@
                         <!-- Manual tests will be excluded -->
                         <exclude>**/*MT.java</exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
                 </configuration>
             </plugin>
         </plugins>
