--- a/src/docker/docker-compose/postgresql.yml
+++ b/src/docker/docker-compose/postgresql.yml
@@ -1,9 +1,9 @@
-version: "3"
+version: "3.7"
 services:
     postgres:  
       image: postgres
       volumes:
-        - ~/pgdata:/var/lib/postgresql/data
+        - $(PWD)/pgdata:/var/lib/postgresql/data
       ports:
         - "5432:5432"
       environment:
@@ -12,19 +12,14 @@ services:
        - POSTGRES_DB=fredbetdb
     fredbet:
       image: fred4jupiter/fredbet
-      links:
-        - postgres
       depends_on:
         - postgres
       ports:
         - "8080:8080"
       environment:
-       - SPRING_PROFILES_ACTIVE=prod
+       - SPRING_PROFILES_ACTIVE=postgres
        - SPRING_DATASOURCE_HIKARI_JDBC_URL=jdbc:postgresql://postgres:5432/fredbetdb
        - SPRING_DATASOURCE_HIKARI_USERNAME=fred
        - SPRING_DATASOURCE_HIKARI_PASSWORD=fred
-       - SPRING_DATASOURCE_HIKARI_DRIVER_CLASS_NAME=org.postgresql.Driver
-       - FREDBET_IMAGE_LOCATION_FILE=FILE_SYSTEM
-       - FREDBET_IMAGE_FILE_SYSTEM_BASE_FOLDER=/home/fred/fredbet_images
       volumes:
-       - "~/fredbet_images:/home/fred/fredbet_images"
+       - $(PWD)/logs:/home/fred/logs
