--- a/extra/docker-compose/letsencrypt/docker-compose.yml
+++ b/extra/docker-compose/letsencrypt/docker-compose.yml
@@ -3,21 +3,21 @@ services:
   fredbet:
     image: fred4jupiter/fredbet
     links:
-     - postgres
+      - postgres
     depends_on:
-     - postgres
+      - postgres
     ports:
-     - "8080:8080"
+      - "8080:8080"
     environment:
-     - SPRING_PROFILES_ACTIVE=postgres
-     - SPRING_DATASOURCE_HIKARI_JDBC_URL=jdbc:postgresql://postgres:5432/fredbetdb
-     - SPRING_DATASOURCE_HIKARI_USERNAME=fred
-     - SPRING_DATASOURCE_HIKARI_PASSWORD=fred     
-     - VIRTUAL_HOST=mydomain.de,www.mydomain.de
-     - LETSENCRYPT_HOST=mydomain.de,www.mydomain.de
-     - LETSENCRYPT_EMAIL=myemail
+      - SPRING_PROFILES_ACTIVE=postgres
+      - SPRING_DATASOURCE_HIKARI_JDBC_URL=jdbc:postgresql://postgres:5432/fredbetdb
+      - SPRING_DATASOURCE_HIKARI_USERNAME=fred
+      - SPRING_DATASOURCE_HIKARI_PASSWORD=fred
+      - VIRTUAL_HOST=mydomain.de,www.mydomain.de
+      - LETSENCRYPT_HOST=mydomain.de,www.mydomain.de
+      - LETSENCRYPT_EMAIL=myemail
     volumes:
-      - "~/logs:/home/fred/logs"
+      - "./logs:/logs"
   postgres:  
     image: postgres
     volumes:
@@ -25,9 +25,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-     - POSTGRES_USER=fred
-     - POSTGRES_PASSWORD=fred
-     - POSTGRES_DB=fredbetdb
+      - POSTGRES_USER=fred
+      - POSTGRES_PASSWORD=fred
+      - POSTGRES_DB=fredbetdb
   nginx-proxy:
     image: jwilder/nginx-proxy
     ports:
