--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,8 +1,8 @@
 name: Java CI
 on:
   push:
-    branches:
-      - master
+    tags-ignore:
+      - '*.*'
 jobs:
   build:
     runs-on: ubuntu-latest
