--- a/src/main/resources/application-integration_test.yml
+++ b/src/main/resources/application-integration_test.yml
@@ -1,4 +1,3 @@
 spring:
   datasource:
-    hikari:
-      jdbc-url: jdbc:h2:mem:fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:fredbetdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
