--- a/src/main/resources/application-maria.yml
+++ b/src/main/resources/application-maria.yml
@@ -1,5 +1,4 @@
 spring:
   datasource:
-    hikari:
-      jdbc-url: jdbc:mariadb://localhost:3306/fredbet
-      driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://localhost:3306/fredbet
+    driver-class-name: org.mariadb.jdbc.Driver
