--- a/src/main/resources/application-postgres.yml
+++ b/src/main/resources/application-postgres.yml
@@ -1,5 +1,4 @@
 spring:
   datasource:
-    hikari:
-      jdbc-url: jdbc:postgresql://localhost:5432/fredbet
-      driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/fredbet
+    driver-class-name: org.postgresql.Driver
