--- a/extra/docker-compose/mariadb/docker-compose.yml
+++ b/extra/docker-compose/mariadb/docker-compose.yml
@@ -1,11 +1,15 @@
 version: "3"
+
+networks:
+  fredbet:
+  
 services:
     mariadb:  
       image: mariadb:10.1.11
+      networks:
+        - fredbet
       volumes:
         - ~/mariadb:/var/lib/mysql
-      ports:
-        - "3306:3306"
       environment:
        - MYSQL_DATABASE=fredbetdb
        - MYSQL_ROOT_PASSWORD=secred
@@ -13,14 +17,16 @@ services:
        - MYSQL_PASSWORD=fred
     fredbet:
       image: fred4jupiter/fredbet
+      networks:
+        - fredbet
       links:
-        - mariadb:mariadb
+        - mariadb
       depends_on:
         - mariadb
       ports:
         - "8080:8080"
       environment:
-       - SPRING_PROFILES_ACTIVE=prod
+       - SPRING_PROFILES_ACTIVE=maria
        - SPRING_DATASOURCE_URL=jdbc:mariadb://mariadb:3306/fredbetdb
        - SPRING_DATASOURCE_USERNAME=fred
        - SPRING_DATASOURCE_PASSWORD=fred
