--- a/src/main/resources/application-maria.yml
+++ b/src/main/resources/application-maria.yml
@@ -1,4 +1,4 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/fredbet
+    url: jdbc:mariadb://mariadb:3306/fredbet
     driver-class-name: org.mariadb.jdbc.Driver
