--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,19 @@
             <version>3.0.25</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.yaml</groupId>
+                    <artifactId>snakeyaml</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
