--- a/pom.xml
+++ b/pom.xml
@@ -339,8 +339,11 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.1.1</version>
                 <configuration>
+                    <from>
+                        <image>adoptopenjdk:15-jre-hotspot</image>
+                    </from>
                     <to>
                         <image>${project.artifactId}</image>
                     </to>
