upgrade to java 16 and spring boot 2.5.2

--- a/extra/docker-compose/postgresql/docker-compose.yml
+++ b/extra/docker-compose/postgresql/docker-compose.yml
@@ -12,9 +12,9 @@ services:
       - POSTGRES_DB=fredbetdb
       - TZ=Europe/Berlin
   fredbet:
-    image: fred4jupiter/fredbet
-    #    build:
-    #    context: ../../../
+    #    image: fred4jupiter/fredbet
+    build:
+      context: ../../../
     depends_on:
       - postgres
     ports:
