--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,10 +7,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Set up JDK 16
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
-        java-version: 16
+        java-version: '16'
+        distribution: 'adopt'
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn --batch-mode --update-snapshots verify --file pom.xml
