--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,10 @@
             <artifactId>ckeditor</artifactId>
             <version>4.14.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>webjars-locator-core</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
