--- a/pom.xml
+++ b/pom.xml
@@ -158,9 +158,9 @@
             <version>5.12.0</version>
         </dependency>
         <dependency>
-            <groupId>org.webjars.bower</groupId>
+            <groupId>org.webjars</groupId>
             <artifactId>popper.js</artifactId>
-            <version>1.11.1</version>
+            <version>1.16.0</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
