--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -10,13 +10,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Build image
-        run: docker build . --file Dockerfile --tag fredbet:latest
+      - name: Set up JDK 16 for deploy to Docker Hub
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '16'
+          server-id: docker.io
+          server-username: ${{ secrets.DOCKER_USERNAME }}
+          server-password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Log into registry
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
-      - name: Push image to Docker Hub
-        run: |          
-          docker tag fredbet:latest fred4jupiter/fredbet:latest
-          docker push fred4jupiter/fredbet:latest
+      - name: Publish to Docker Hub
+        run: mvn compile com.google.cloud.tools:jib-maven-plugin:3.1.4:build -Dimage=docker.io/fred4jupiter/fredbet
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_TOKEN: ${{ secrets.DOCKER_PASSWORD }}
