--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -17,10 +17,10 @@ jobs:
           java-version: '16'
           server-id: docker.io
           server-username: ${{ secrets.DOCKER_USERNAME }}
-          server-password: ${{ secrets.DOCKER_PASSWORD }}
+          server-password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Publish to Docker Hub
         run: mvn compile com.google.cloud.tools:jib-maven-plugin:3.1.4:build -Dimage=docker.io/fred4jupiter/fredbet
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_TOKEN: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
