--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -19,8 +19,11 @@ jobs:
           server-username: ${{ secrets.DOCKER_USERNAME }}
           server-password: ${{ secrets.DOCKER_TOKEN }}
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
       - name: Publish to Docker Hub
         run: mvn compile com.google.cloud.tools:jib-maven-plugin:3.1.4:build -Dimage=docker.io/fred4jupiter/fredbet
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
