--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,5 +15,12 @@ jobs:
       with:
         java-version: '16'
         distribution: 'adopt'
+    - name: Cache local Maven repository
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
     - name: Build with Maven
       run: mvn --batch-mode --update-snapshots verify --file pom.xml
