--- a/pom.xml
+++ b/pom.xml
@@ -335,9 +335,9 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <version>3.1.4</version>
                 <configuration>
-<!--                    <from>-->
-<!--                        <image>adoptopenjdk:17-jre-hotspot</image>-->
-<!--                    </from>-->
+                    <from>
+                        <image>eclipse-temurin:17.0.1_12-jre-focal</image>
+                    </from>
                     <to>
                         <image>${project.artifactId}</image>
                     </to>
