--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -25,6 +25,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
+      - name: Build docker image
+        run: mvn spring-boot:build-image -Dspring-boot.build-image.imageName=docker.io/fred4jupiter/fredbet
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -32,4 +35,4 @@ jobs:
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Publish to Docker Hub
-        run: mvn spring-boot:build-image -Dspring-boot.build-image.imageName=docker.io/fred4jupiter/fredbet
+        run: docker push docker.io/fred4jupiter/fredbet
