--- a/src/main/resources/TranslationMessages.properties
+++ b/src/main/resources/TranslationMessages.properties
@@ -620,3 +620,5 @@ importexport.subtitle=Es werden alle Benutzer, Spiele und Tipps importiert und e
 language.es=spanisch
 language.ca=katalanisch
 country.cat=Katalonien
+administration.runtime.configuration.theme=Layout Theme
+administration.runtime.configuration.layout=Layout
