--- a/src/main/resources/TranslationMessages.properties
+++ b/src/main/resources/TranslationMessages.properties
@@ -622,3 +622,4 @@ language.ca=katalanisch
 country.cat=Katalonien
 administration.runtime.configuration.theme=Layout Theme
 administration.runtime.configuration.layout=Layout
+administration.runtime.configuration.navbarlayout=Navbar Layout
