--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -24,7 +24,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Publish to GitHub Container Registry
-        run: mvn -B verify jib:dockerBuild -Dimage=ghcr.io/fred4jupiter/fredbet:latest
+        run: mvn -B compile jib:build -Dimage=ghcr.io/fred4jupiter/fredbet:latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   build_push_docker_hub_amd64:
@@ -52,7 +52,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
       - name: Publish to Docker Hub
-        run: mvn -B verify jib:dockerBuild -Dimage=docker.io/fred4jupiter/fredbet:latest
+        run: mvn -B compile jib:build -Dimage=docker.io/fred4jupiter/fredbet:latest
   build_push_docker_hub_arm64:
     runs-on: ubuntu-18.04
     if: github.event_name == 'push'
@@ -75,7 +75,7 @@ jobs:
         run: |
           echo ::set-output name=docker_platform::${DOCKER_TARGET_PLATFORM}
           echo ::set-output name=docker_image::${DOCKER_REGISTRY}/${DOCKER_IMAGE}
-          echo ::set-output name=version::latest-arm64
+          echo ::set-output name=docker_version::latest-arm64
       - name: Docker Login
         if: success()
         run: |
@@ -85,6 +85,6 @@ jobs:
         run: |
           docker buildx build \
             --platform ${{ steps.prepare.outputs.docker_platform }} \
-            --tag ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }} \
+            --tag ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.docker_version }} \
             --file ./Dockerfile-arm \
             --output type=image,push=true .
