--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -1,19 +1,46 @@
 name: Publish Docker latest image
 on:
-  workflow_dispatch:
-    inputs:
-      release_tag_version:
-        description: 'The release tag version number to use, e.g. 2.8.0'
-        required: true
+  push:
     branches:
       - master
+
 jobs:
-  build_push_ghcr_amd64:
+  build_tag_repo:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+    outputs:
+      release_version: ${{steps.bump.outputs.version}} # use in jobs: ${{needs.build_tag_repo.outputs.release_version}}
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+      - name: Build with Maven
+        run: mvn -B verify
+      - name: Bump Version
+        id: bump
+        uses: nnichols/maven-version-bump-action@v3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Print release version
+        run: "echo 'New release Version: ${{steps.bump.outputs.version}}'"
+  build_push_ghcr_amd64:
+    runs-on: ubuntu-latest
+    needs: build_tag_repo
+    steps:
+      - name: Checkout the tagged code
+        uses: actions/checkout@v3
+        with:
+          ref: ${{needs.build_tag_repo.outputs.release_version}}
       - name: Set up JDK 17 for deploy to GitHub Container Registry
         uses: actions/setup-java@v2
         with:
@@ -33,10 +60,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   build_push_docker_hub_amd64:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+    needs: build_tag_repo
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v2
+      - name: Checkout the tagged code
+        uses: actions/checkout@v3
+        with:
+          ref: ${{needs.build_tag_repo.outputs.release_version}}
       - name: Set up JDK 17 for deploy to Docker Hub
         uses: actions/setup-java@v2
         with:
@@ -59,7 +88,7 @@ jobs:
         run: mvn -B verify jib:dockerBuild -Dimage=docker.io/fred4jupiter/fredbet:latest
   build_push_docker_hub_arm64:
     runs-on: ubuntu-18.04
-    if: github.event_name == 'push'
+    needs: build_tag_repo
     env:
       DOCKER_REGISTRY: docker.io
       DOCKER_IMAGE: fred4jupiter/fredbet
@@ -67,10 +96,12 @@ jobs:
       DOCKER_PASSWORD: ${{ secrets.DOCKER_TOKEN }}
       DOCKER_TARGET_PLATFORM: linux/arm64/v8
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v1
+      - name: Checkout the tagged code
+        uses: actions/checkout@v3
+        with:
+          ref: ${{needs.build_tag_repo.outputs.release_version}}
       - name: Set up Docker Buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
+        uses: docker/setup-buildx-action@v1
         with:
           version: latest
       - name: Prepare
