--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -5,9 +5,28 @@ on:
       - dev
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the code
+        uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+      - name: Build with Maven
+        run: mvn -B verify
   build_push_ghcr_amd64:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+    needs: build
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
@@ -30,7 +49,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   build_push_docker_hub_amd64:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+    needs: build
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
@@ -56,7 +75,7 @@ jobs:
         run: mvn -B compile jib:build -Dimage=docker.io/fred4jupiter/fredbet:latest
   build_push_docker_hub_arm64:
     runs-on: ubuntu-18.04
-    if: github.event_name == 'push'
+    needs: build
     env:
       DOCKER_REGISTRY: docker.io
       DOCKER_IMAGE: fred4jupiter/fredbet
