--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -7,7 +7,7 @@ jobs:
   build_tag_repo:
     runs-on: ubuntu-latest
     outputs:
-      release_version: ${{steps.bump.outputs.version}} # use in jobs: ${{needs.build_tag_repo.outputs.release_version}}
+      release_version: ${{steps.version_update.outputs.release-version}} # use in jobs: ${{needs.build_tag_repo.outputs.release_version}}
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
@@ -25,13 +25,13 @@ jobs:
             ${{ runner.os }}-maven-
       - name: Build with Maven
         run: mvn -B verify
-      - name: Bump Version
-        id: bump
-        uses: nnichols/maven-version-bump-action@v3
+      - name: Update to release version and tag
+        id: version_update
+        uses: fred4jupiter/maven-version-update-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Print release version
-        run: "echo 'New release Version: ${{steps.bump.outputs.version}}'"
+        run: "echo 'New release Version: ${{steps.version_update.outputs.release-version}}'"
   build_push_ghcr_amd64:
     runs-on: ubuntu-latest
     needs: build_tag_repo
