setting main class for the jib plugin

--- a/pom.xml
+++ b/pom.xml
@@ -326,6 +326,7 @@
                     </to>
                     <container>
                         <jvmFlags>
+                            <mainClass>de.fred4jupiter.fredbet.Application</mainClass>
                             <jvmFlag>-Duser.timezone=Europe/Berlin</jvmFlag>
                         </jvmFlags>
                     </container>
