--- a/pom.xml
+++ b/pom.xml
@@ -319,7 +319,7 @@
                 <version>3.2.1</version>
                 <configuration>
                     <from>
-                        <image>eclipse-temurin:17.0.1_12-jre-focal</image>
+                        <image>eclipse-temurin:17.0.3_7-jre-alpine</image>
                     </from>
                     <to>
                         <image>${project.artifactId}</image>
