--- a/Dockerfile-arm
+++ b/Dockerfile-arm
@@ -8,12 +8,12 @@ COPY .git /build/.git/
 RUN mvn -B -DskipTests package
 
 # Step : Package image
-FROM arm64v8/openjdk:17-slim
+FROM arm64v8/eclipse-temurin:17-jre-focal
 LABEL maintainer="Michael Staehler"
 
 VOLUME /tmp
 
-ENV JAVA_OPTS="-Duser.timezone=Europe/Berlin -Djava.security.egd=file:/dev/./urandom"
+ENV JAVA_OPTS="-Duser.timezone=Europe/Berlin"
 
 EXPOSE 8080
 
