--- a/Dockerfile-layered
+++ b/Dockerfile-layered
@@ -16,7 +16,7 @@ LABEL maintainer="Michael Staehler"
 
 WORKDIR /build
 
-ENV JAVA_OPTS="-Duser.timezone=Europe/Berlin -Djava.security.egd=file:/dev/./urandom"
+ENV JAVA_OPTS="-Duser.timezone=Europe/Berlin"
 
 COPY --from=builder /build/dependencies/ ./
 COPY --from=builder /build/spring-boot-loader/ ./
