#34 other admin users can´t update the default user admin

--- a/src/main/resources/TranslationMessages.properties
+++ b/src/main/resources/TranslationMessages.properties
@@ -623,3 +623,4 @@ country.cat=Katalonien
 administration.runtime.configuration.theme=Layout Theme
 administration.runtime.configuration.layout=Layout
 administration.runtime.configuration.navbarlayout=Navbar Layout
+user.edited.notAllowed=Sie sind nicht berechtigt diesen Benutzer zu bearbeiten!
