--- a/src/main/resources/TranslationMessages.properties
+++ b/src/main/resources/TranslationMessages.properties
@@ -41,9 +41,9 @@ administration.runtime.configuration.favouriteCountry                    = L\u00
 administration.runtime.configuration.joker                               = Konfiguration Joker-Tipp
 administration.runtime.configuration.jokerMaxCount.title                 = max. Anzahl Joker
 administration.runtime.configuration.passwordForReset                    = Passwort nach Passwort-Reset
-administration.runtime.configuration.pointsFinalWinner.title             = Punkte f\u00FCr Meister
-administration.runtime.configuration.pointsSemiFinalWinner.title         = Punkte f\u00FCr Vize-Meister
-administration.runtime.configuration.pointsThirdFinalWinner.title        = Punkte f\u00FCr 3. Platz
+administration.runtime.configuration.pointsFinalWinner.title=Meister
+administration.runtime.configuration.pointsSemiFinalWinner.title=Vize-Meister
+administration.runtime.configuration.pointsThirdFinalWinner.title=3. Platz
 administration.runtime.configuration.showDemoDataNavigationEntry         = Men\u00FCeintrag "Datenanlage"
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Men\u00FCeintrag "Datenanlage" in Navigation anzeigen.
 administration.runtime.configuration.timeZone                            = Zeitzone
